--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "single-spa": "^4.3.5",
+    "single-spa-react": "^2.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
